Updated: [Confluence] forgot to update linux makefile for new image
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/trunk@29330 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/skin/Confluence/media/Makefile
+++ b/skin/Confluence/media/Makefile
@@ -156,6 +156,7 @@ IMAGES= \
 	flagging/video/mpeg1video.png \
 	flagging/video/mpeg2video.png \
 	flagging/video/sd.png \
+	flagging/video/vc-1.png \
 	flagging/video/wvc1.png \
 	flagging/video/xvid.png \
 	floor.png \
