--- a/configure.in
+++ b/configure.in
@@ -445,6 +445,9 @@ else
   PKG_CHECK_MODULES([XTST],         [xtst],
                     [INCLUDES+=" $XTST_CFLAGS"; LIBS+=" $XTST_LIBS"],
                     AC_MSG_ERROR($missing_library))
+  PKG_CHECK_MODULES([XEXT],         [xext],
+                    [INCLUDES+=" $XEXT_CFLAGS"; LIBS+=" $XEXT_LIBS"],
+                    AC_MSG_ERROR($missing_library))
   PKG_CHECK_MODULES([XMU],          [xmu],
                     [INCLUDES+=" $XMU_CFLAGS"; LIBS+=" $XMU_LIBS"],
                     AC_MSG_ERROR($missing_library))
