changed: remove some pointless warnings
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/trunk@29395 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/xbmc/cores/dvdplayer/Codecs/libdts/vc++/libdts.vcproj
+++ b/xbmc/cores/dvdplayer/Codecs/libdts/vc++/libdts.vcproj
@@ -53,8 +53,9 @@
 				ProgramDataBaseFileName=".\Debug/"
 				WarningLevel="3"
 				SuppressStartupBanner="true"
-				DebugInformationFormat="4"
+				DebugInformationFormat="3"
 				CompileAs="1"
+				DisableSpecificWarnings="4244,4305"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -138,6 +139,7 @@
 				WarningLevel="3"
 				SuppressStartupBanner="true"
 				CompileAs="1"
+				DisableSpecificWarnings="4244,4305"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
